...
            title: Text("Device name: ${widget.device.platformName}"),
            subtitle: Text("Device ID: ${widget.device.remoteId}"),
          ),
        ),
        const SizedBox(height: 20),
        ElevatedButton(
          key: isConnected ? Key('disconnect_button') : Key('connect_button'),
          onPressed: isConnected ? _disconnectFromDevice : _connectToDevice,
          style: ElevatedButton.styleFrom(
            foregroundColor: Colors.white,
            backgroundColor: isConnected ? Colors.red : Colors.blue,
            minimumSize: const Size(350, 55),
          ),
...
