...
                    ),
                  ),
                ),
                const SizedBox(height: 20),

                Center(
                  child: ElevatedButton(key: Key('scan_button'),
                    onPressed: () => controller.scanDevices(),
                  style: ElevatedButton.styleFrom(
                    foregroundColor: Colors.white,
                    backgroundColor: Colors.blue,
                    minimumSize: const Size(350, 55),
                  ),
...
